--- a/config.env
+++ b/config.env
@@ -1,2 +1,3 @@
+BCRYPT_SALT = 10
 MONGO_URI=mongodb+srv://testuser:testpassword@cluster0.0blv3.mongodb.net/travel3?retryWrites=true&w=majority
 jwtSecret=secret
